# tailblazer

./: .gitignore  README.md  pyproject.toml  setup.py
tailblazer/: __init__.py  compute.py  functions.py
tests/: test_cume_tail_mean.py  test_pct_rank.py
